Fix layout issue_2

--- a/src/style.css
+++ b/src/style.css
@@ -6,11 +6,6 @@
     padding: 20px 0;
 }
 
-.App__section {
-    position: relative;
-    z-index: -1;
-}
-
 .Header{
     color: white;
     font-family: "Roboto Mono";
@@ -137,6 +132,7 @@ li {
     position: fixed;
     width: 100%;
     top: 0;
+    z-index: 1;
 }
 
 .nav__logo {
